refactor : SOLID